--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h1, h4 {
   display: block;
   width: 100px;
   height: 50px;
-  background: #99e2cf;
+  background: rgb(153, 226, 207);
   font-size: medium;
   position: absolute;
   top: 20px;
@@ -115,7 +115,7 @@ h1, h4 {
 .restaurants-button:hover {
   box-shadow: 0px 8px 7px 1px black;
   transform: scale(1.1);
-  background: #99e2cf;
+  background: rgb(153, 226, 207);
   filter: brightness(110%);
 }
 
@@ -196,7 +196,7 @@ h1, h4 {
   padding: 7px;
 }
 .new--text {
-  color: #008766;
+  color: rgb(0, 135, 102);
   font-weight: bold;
 }
 
@@ -211,11 +211,9 @@ h1, h4 {
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
-
   .bloc--card {
     margin-bottom: 40px;
   }
-
   .bloc--card--details {
     border-radius: 15px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
@@ -292,7 +290,7 @@ h1, h4 {
 .restaurants-container {
   display: flex;
   flex-direction: column;
-  background-color: #f2f1f1;
+  background-color: rgb(242, 241, 241);
   width: 100%;
 }
 .restaurants-container .restaurants-container__title {
@@ -321,7 +319,7 @@ h1, h4 {
 .restaurants-container .new-button--text {
   text-align: center;
   font-weight: bold;
-  color: #008766;
+  color: rgb(0, 135, 102);
 }
 .restaurants-container .fa-regular.fa-heart {
   display: flex;
@@ -335,17 +333,15 @@ h1, h4 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: #f2f1f1;
+    background-color: rgb(242, 241, 241);
     width: 100%;
   }
-
   .restaurants-container__title {
     font-size: 25px;
     font-weight: bold;
     text-align: left;
     margin-left: 5px;
   }
-
   .restaurants-img {
     width: 100%;
     height: 170px;
@@ -362,7 +358,7 @@ h1, h4 {
 }
 
 .footer {
-  background-color: #343434;
+  background-color: rgb(52, 52, 52);
   padding: 22px 25px 35px 25px;
 }
 .footer__title {
@@ -449,7 +445,7 @@ h1, h4 {
   overflow: hidden;
   border-radius: 20px;
   box-shadow: 0px 8px 7px 1px black;
-  animation: appear 2s ease-in backwards;
+  animation: show 2s ease-in backwards;
 }
 .menu__bloc:hover > .menu__bloc--effect {
   transform: translateX(0px);
@@ -496,7 +492,7 @@ h1, h4 {
   display: flex;
   align-items: flex-end;
   font-weight: bold;
-  width: 50px;
+  width: 65px;
   transition-duration: 1s;
 }
 
@@ -521,15 +517,12 @@ h1, h4 {
   .menu__entree {
     flex-wrap: wrap;
   }
-
   .bloc {
     padding-left: 20px;
   }
-
   .bloc-detail__title {
     font-size: 15px;
   }
-
   .bloc-detail__text {
     font-size: 13px;
   }
@@ -566,7 +559,7 @@ h1, h4 {
   width: 100px;
   height: 100px;
   border-radius: 40px;
-  border-top-color: #008766;
+  border-top-color: rgb(0, 135, 102);
   border-bottom-color: #000000;
   animation: chargement 2s;
 }
@@ -575,8 +568,8 @@ h1, h4 {
   0% {
     transform: rotate(0deg);
     scale: 1;
-    border-top-color: #008766;
-    border-bottom-color: #008766;
+    border-top-color: rgb(0, 135, 102);
+    border-bottom-color: rgb(0, 135, 102);
   }
   25% {
     border-top-color: #000000;
@@ -629,11 +622,11 @@ h1, h4 {
   }
 }
 .delay1 {
-  animation-delay: 0.1s;
+  animation-delay: 0.2s;
 }
 
 .delay2 {
-  animation-delay: 0.3s;
+  animation-delay: 0.4s;
 }
 
 .delay3 {
@@ -641,7 +634,7 @@ h1, h4 {
 }
 
 .delay4 {
-  animation-delay: 0.9s;
+  animation-delay: 0.8s;
 }
 
 @keyframes valid-slide {
