--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -1,7 +1,7 @@
 .loader{
     width: 100%;
     height: 100%;
-    background-color: #008766;
+    background-color: #ffffff;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -46,8 +46,8 @@
         border-bottom-color: $purple;
     }
     75%{
-        border-top-color: $white;
-        border-bottom-color: $white;
+        border-top-color: $pink;
+        border-bottom-color: $pink;
     }
     100%{
         transform: rotate(720deg); scale: (1);
