--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -1,7 +1,7 @@
 .menu{
   position: relative;
-  background-color: #ececec;
-  border-radius: 45px 45px 0px 0px;
+  background-color: #ffffff;
+  border-radius: 35px 35px 0px 0px;
   margin-top: -50px;
   padding-bottom: 50px;
   height: auto;
@@ -15,8 +15,8 @@
     font-weight: lighter;
   }
   &__line{
-    border-bottom:  solid 5px $green;
-    width: 30px;
+    border-bottom:  solid 4px $green;
+    width: 38px;
     padding-top: 15px;
     &--text{
       text-transform: uppercase;
