--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -1,6 +1,6 @@
 .menu{
   position: relative;
-  background-color: #ffffff;
+  background-color: #F6F6F6;
   border-radius: 35px 35px 0px 0px;
   margin-top: -50px;
   padding-bottom: 50px;
@@ -30,11 +30,11 @@
     justify-content: space-between;
     position: relative;
     background: $white;
-    height: 70px;
     max-width: 400px;
     width: 100%;
-    margin-right: 20px;
+    height: 70px;
     margin-top: 15px;
+    margin-right: 20px;
     overflow: hidden;
     border-radius: 20px;
     box-shadow: 0px 8px 7px 1px black;
