ajout d'un margin top dans la classe header-buton du fichier button.scss

--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -5,6 +5,7 @@
     border-radius: 25px;
     background: linear-gradient(180deg, #FF79DA, #9356DC);
     margin: auto;
+    margin-top: 53px;
 }
 
 .header-buton:hover {
