ajout des font family dans les classes &--litletext et &__title dans le fichier footer.scss

--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -5,6 +5,7 @@
   &__title {
     color: $white;
     margin-bottom: 15px;
+    font-family: 'Shrikhand', sans-serif;
 
   }
 
@@ -23,6 +24,7 @@
 
     &--litletext {
       color: $white;
+      font-family: 'Roboto', sans-serif;
     }
 
   }
