--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -11,7 +11,7 @@
     display: flex;
   }
   &__title{
-    font-family: 'Shrikhand', cursive;
+    font-family: 'Shrikhand', sans-serif;
     font-weight: lighter;
   }
   &__line{
