ajout d'une font wheight et font size dans la classe &__title du fichier menu.scss

--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -12,7 +12,8 @@
   }
   &__title{
     font-family: 'Shrikhand', sans-serif;
-    font-weight: lighter;
+    font-weight: 800;
+    font-size: 30px;
   }
   &__line{
     border-bottom:  solid 4px $green;
