--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -1,4 +1,4 @@
-.loader{
+.loader {
     width: 100%;
     height: 100%;
     background-color: #ffffff;
@@ -25,32 +25,39 @@
         border-radius: 40px;
         border-top-color: $dark-green;
         border-bottom-color: $black;
-        animation: chargement 2s ;
+        animation: chargement 6s;
     }
 
 }
 
 @keyframes chargement {
-    0%{
-        transform: rotate(0deg); scale: (1);
+    0% {
+        transform: rotate(0deg);
+        scale: (1);
         border-top-color: $dark-green;
         border-bottom-color: $dark-green;
     }
-    25%{
+
+    25% {
         border-top-color: $black;
         border-bottom-color: $black;
     }
-    50%{
-        transform: rotate(360deg); scale: (1.20);
+
+    50% {
+        transform: rotate(360deg);
+        scale: (1.20);
         border-top-color: $purple;
         border-bottom-color: $purple;
     }
-    75%{
+
+    75% {
         border-top-color: $pink;
         border-bottom-color: $pink;
     }
-    100%{
-        transform: rotate(720deg); scale: (1);
+
+    100% {
+        transform: rotate(720deg);
+        scale: (1);
         border-top-color: $green;
         border-bottom-color: $green;
     }
@@ -59,20 +66,20 @@
 
 
 @keyframes chargement-background {
-    0%{
+    0% {
         opacity: 0.9;
     }
 
 
-    75%{
+    75% {
         opacity: 0.9;
     }
 
-    95%{
+    95% {
         transform: scale(1);
     }
 
-    100%{
+    100% {
         transform: scale(0);
         opacity: 0;
     }
