ajout de la variable de couleur purple dans les classes &-bloc num et & -num du fichier filtre.scss

--- a/sass/components/filtre.scss
+++ b/sass/components/filtre.scss
@@ -33,7 +33,7 @@
     height: 27px;
     width: 27px;
     border-radius: 28px;
-    background-color: #9356DC;
+    background-color: $purple;
   }
 
   &-num {
@@ -42,7 +42,7 @@
   }
 
   .fas.fa-store.iconz {
-    color: #9356DC;
+    color: $purple;
   }
 
 }
