--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -5,7 +5,7 @@
     align-items: center;
     height: 60px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: $white;
   }
 
   &-img {
@@ -35,7 +35,7 @@
 }
 
 .reservez-container {
-  background-color: #F6F6F6;
+  background-color: $light-grey;
   padding: 50px;
 
   &__title {
@@ -55,5 +55,5 @@
 .buton--text {
   text-align: center;
   padding-top: 12px;
-  color: white;
+  color: $white;
 }
