--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -1,3 +1,8 @@
+.menu-container{
+  width: 600px;
+  margin:auto;
+}
+
 .menu{
   position: relative;
   background-color: #F6F6F6;
@@ -6,19 +11,28 @@
   padding-bottom: 50px;
   height: auto;
   padding-left: 20px;
+  padding-right: 20px;
+  max-width: 1055px;
+  margin-left: auto;
+  margin-right: auto;
 
   &__entree{
     display: flex;
+    flex-direction: column;
+    margin: auto;
+ 
   }
   &__title{
     font-family: 'Shrikhand', sans-serif;
     font-weight: 800;
     font-size: 30px;
+    
   }
   &__line{
     border-bottom:  solid 4px $green;
     width: 38px;
     padding-top: 15px;
+    
     &--text{
       text-transform: uppercase;
       font-weight: normal;
@@ -31,14 +45,14 @@
     justify-content: space-between;
     position: relative;
     background: $white;
-    max-width: 400px;
     width: 100%;
     height: 70px;
     margin-top: 15px;
-    margin-right: 20px;
     overflow: hidden;
     border-radius: 20px;
     box-shadow: 0px 8px 7px 1px black;
+    max-width: 600px;
+    
 
     animation: show 2s ease-in backwards;
 
