ajout de la class fonctionnement container dans le fichier filtre.scss

--- a/sass/components/filtre.scss
+++ b/sass/components/filtre.scss
@@ -1,5 +1,7 @@
 .fonctionnement-container {
-
+  &__title1 {
+     padding: 15px;
+  }
   &__filtres {
     display: flex;
     justify-content: space-around;
