--- a/sass/components/hearts.scss
+++ b/sass/components/hearts.scss
@@ -43,6 +43,8 @@
   position: relative;
   height: 80px;
   width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 
   &--icone{
     position: absolute;
