--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -1,6 +1,6 @@
 .menu-container{
-  width: 600px;
-  margin:auto;
+  max-width: 1050px;
+  margin: auto;
 }
 
 .menu{
@@ -31,7 +31,7 @@
   &__line{
     border-bottom:  solid 4px $green;
     width: 38px;
-    padding-top: 15px;
+    
     
     &--text{
       text-transform: uppercase;
@@ -40,6 +40,13 @@
       margin-bottom: 4px;
     }
   }
+
+   &__area {
+    width: 600px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
   &__bloc{
     display: flex;
     justify-content: space-between;
