--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -58,7 +58,7 @@
     margin-top: 15px;
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: 0px 8px 7px 1px black;
+    box-shadow: 0px 4px 4px 1px grey;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
