--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -70,5 +70,21 @@
   }
 }
 
+@media screen and (min-width: 1138px) {
+  .bloc{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 
+  .bloc--card {
+    margin-bottom: 40px;
+    width: 450px;
+  }
 
+  .bloc--card--details{
+    border-radius: 15px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+
+  }
+}  
